--- a/Exercise-2-Add numbers/index.html
+++ b/Exercise-2-Add numbers/index.html
@@ -12,7 +12,8 @@
     <h1>Example for adding two numbers</h1>
     <input id="num1">
     <input id="num2">
-    
+    <input id="num3">
+    <input id="num4">
     <button id="sum" onclick="addNumbers();">AddNumbers</button>
     <div>
       <span>Result is : </span>
